@@ -1,0 +1,44 @@
+/*
+  wxHarbour: a portable GUI for [x]Harbour Copyright (C) 2009 Teo Fonrouge
+
+  This library is free software; you can redistribute it and/or modify it under the terms of the GNU Lesser General Public License as published by the Free Software Foundation; either version 2.1 of the License, or (at your option) any later version.
+
+  This library is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more details.
+
+  You should have received a copy of the GNU Lesser General Public License along with this library; if not, write to the Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
+
+  (C) 2009 Teo Fonrouge <teo@windtelsoft.com>
+*/
+
+#ifdef __XHARBOUR__
+  #include "wx_hbcompat.ch"
+#endif
+
+#include "hbclass.ch"
+#include "property.ch"
+#include "wx.ch"
+
+/*
+  wxTimer
+  Teo. Mexico 2009
+*/
+CLASS wxTimer FROM wxEvtHandler
+PRIVATE:
+PROTECTED:
+PUBLIC:
+
+  CONSTRUCTOR New( owner, id )
+
+  METHOD GetInterval
+  METHOD IsOneShot
+  METHOD IsRunning
+  METHOD Notify         VIRTUAL
+  METHOD SetOwner
+  METHOD Start
+  METHOD Stop
+PUBLISHED:
+ENDCLASS
+
+/*
+  End Class wxTimer
+*/
